Bug 230350 - newsyslog does not distinguish between flags T and P
Summary: newsyslog does not distinguish between flags T and P
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 11.2-RELEASE
Hardware: Any Any
: --- Affects Some People
Assignee: Mark Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-04 13:46 UTC by Nicolas Rachinsky
Modified: 2022-01-19 22:40 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Rachinsky 2018-08-04 13:46:02 UTC
The newsyslog.conf-flags T and P have the same effect, both enable both "Do not compress zero'th history file" and  "Use RFC5424 format rotation message".

The constants used for both flags in /usr/src/usr.sbin/newsyslog/newsyslog.c are the same:

#define CE_PLAIN0       0x0800  /* Do not compress zero'th history file */
#define CE_RFC5424      0x0800  /* Use RFC5424 format rotation message */
Comment 1 commit-hook freebsd_committer freebsd_triage 2018-08-04 15:31:35 UTC
A commit references this bug:

Author: markj
Date: Sat Aug  4 15:30:56 UTC 2018
New revision: 337323
URL: https://svnweb.freebsd.org/changeset/base/337323

Log:
  Fix a flag collision introduced in r327451.

  PR:		230350
  MFC after:	3 days

Changes:
  head/usr.sbin/newsyslog/newsyslog.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2018-08-07 14:10:22 UTC
A commit references this bug:

Author: markj
Date: Tue Aug  7 14:09:30 UTC 2018
New revision: 337417
URL: https://svnweb.freebsd.org/changeset/base/337417

Log:
  MFC r337323:
  Fix a flag collision introduced in r327451.

  PR:	230350

Changes:
_U  stable/11/
  stable/11/usr.sbin/newsyslog/newsyslog.c