MFC r337323: Fix a flag collision introduced in r327451.

PR:	230350